fix spacing on auth components

--- a/client/src/style/components/_accounts.scss
+++ b/client/src/style/components/_accounts.scss
@@ -28,7 +28,7 @@
 
 .auth-error {
     height: 1em;
-    margin: 0.25em 0 1em;
+    margin: 0.25em 0;
     font-size: 0.8em;
     color: red;
     font-style: italic;
